--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <section id="showcase">
+    <section class="container" id="showcase">
         <div class="left">
             <h1>The Better Way <br> to Save & Invest</h1>
             <p>PiggyVest helps over 2 million customers achieve their financial goals by 
